--- a/index2.html
+++ b/index2.html
@@ -14,11 +14,15 @@
             <img src="img/download.png" alt="logo">
         </figure>
         <ul>
-            <li><a href="index.html" target="_blank">1st part</a></li>
-            <li><a href="index1.html" target="_blank">2nd part</a></li>
-            <li><a href="index2.html" target="_blank">3rd part</a></li>
+            <li><a href="https://joydip62.github.io/layout-1st-part/" target="_blank">1st part</a></li>
+            <li><a href="https://joydip62.github.io/layout-2nd-part/" target="_blank">2nd part</a></li>
+            <li><a href="https://joydip62.github.io/layout-3rd-part/" target="_blank">3rd part</a></li>
+            <li><a href="" target="_blank">Assignment 1</a></li>
+            <li><a href="https://joydip62.github.io/mybook-registration-layout/" target="_blank">Assignment 2</a></li>
+            <li><a href="https://joydip62.github.io/prothom-alo-simple-layout/" target="_blank">Assignment 3</a></li>
         </ul>
     </header>
+
     <!--Header ends-->
 
     <!--banner starts-->
